Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.108-110_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.108-110_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.108-110_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.108-110:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.108-110:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.108-110:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.108-110:0.3": "108–110. Als Götter sterben und als Götter wiedergeboren werden "
 }
