Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.111-113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.111-113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.111-113_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.111-113:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.111-113:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.111-113:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.111-113:0.3": "111–113. Als Götter sterben und als Menschen wiedergeboren werden "
 }
