Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -736,5 +736,6 @@
   "sn-name:2108.sn56.103": "Als Menschen sterben und als Tiere wiedergeboren werden ",
   "sn-name:2109.sn56.104": "Als Menschen sterben und als Gespenster wiedergeboren werden ",
   "sn-name:2110.sn56.105-107": "Als Menschen sterben und als Götter wiedergeboren werden ",
-  "sn-name:2111.sn56.108-110": "Als Götter sterben und als Götter wiedergeboren werden "
+  "sn-name:2111.sn56.108-110": "Als Götter sterben und als Götter wiedergeboren werden ",
+  "sn-name:2112.sn56.111-113": "Als Götter sterben und als Menschen wiedergeboren werden "
 }
