--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.117-119_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.117-119_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.117-119:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.117-119:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.117-119:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.117-119:0.3": "117–119. In der Hölle sterben und als Götter wiedergeboren werden "
 }
