--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.120-122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.120-122_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.120-122:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.120-122:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.120-122:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.120-122:0.3": "120–122. Als Tiere sterben und als Menschen wiedergeboren werden "
 }
