--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -740,5 +740,6 @@
   "sn-name:2112.sn56.111-113": "Als Götter sterben und als Menschen wiedergeboren werden ",
   "sn-name:2113.sn56.114-116": "In der Hölle sterben und als Menschen wiedergeboren werden ",
   "sn-name:2114.sn56.117-119": "In der Hölle sterben und als Götter wiedergeboren werden ",
-  "sn-name:2115.sn56.120-122": "Als Tiere sterben und als Menschen wiedergeboren werden "
+  "sn-name:2115.sn56.120-122": "Als Tiere sterben und als Menschen wiedergeboren werden ",
+  "sn-name:2116.sn56.123-125": "Als Tiere sterben und als Götter wiedergeboren werden "
 }
