Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -741,5 +741,6 @@
   "sn-name:2113.sn56.114-116": "In der Hölle sterben und als Menschen wiedergeboren werden ",
   "sn-name:2114.sn56.117-119": "In der Hölle sterben und als Götter wiedergeboren werden ",
   "sn-name:2115.sn56.120-122": "Als Tiere sterben und als Menschen wiedergeboren werden ",
-  "sn-name:2116.sn56.123-125": "Als Tiere sterben und als Götter wiedergeboren werden "
+  "sn-name:2116.sn56.123-125": "Als Tiere sterben und als Götter wiedergeboren werden ",
+  "sn-name:2117.sn56.126-128": "Als Gespenster sterben und als Menschen wiedergeboren werden "
 }
