--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.129-130_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.129-130_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.129-130:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.129-130:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
+  "sn56.129-130:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte ",
+  "sn56.129-130:0.3": "129–130. Als Gespenster sterben und als Götter wiedergeboren werden "
 }
