--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn56.131:0.1": "Verbundene Lehrreden 56 "
+  "sn56.131:0.1": "Verbundene Lehrreden 56 ",
+  "sn56.131:0.2": "11. Abgekürzte Texte über fünf Bestimmungsorte "
 }
