Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -743,5 +743,6 @@
   "sn-name:2115.sn56.120-122": "Als Tiere sterben und als Menschen wiedergeboren werden ",
   "sn-name:2116.sn56.123-125": "Als Tiere sterben und als Götter wiedergeboren werden ",
   "sn-name:2117.sn56.126-128": "Als Gespenster sterben und als Menschen wiedergeboren werden ",
-  "sn-name:2118.sn56.129-130": "Als Gespenster sterben und als Götter wiedergeboren werden "
+  "sn-name:2118.sn56.129-130": "Als Gespenster sterben und als Götter wiedergeboren werden ",
+  "sn-name:2119.sn56.131": "Als Gespenster sterben und als Gespenster wiedergeboren werden "
 }
