--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -39,7 +39,7 @@
   "mn2:7.5": "Arba čia pat, dabarty jis viduje abejoja:",
   "mn2:7.6": "„Ar aš esu? Ar manęs nėra? Kas aš esu? Kaip aš esu? Iš kur atėjo ši būtybė? Ir kur ji išeis?”",
   "mn2:8.1": "Taip lengvabūdiškai kreipiančiajam dėmesį  kyla viena iš šešių klaidingų pažiūrų.",
-  "mn2:8.2": "Kaip kažkas tikro ir užtikrinto, kyla požiūris:  „Manoji savastis yra.”",
+  "mn2:8.2": "Kaip kažkas tikro ir užtikrinto, kyla požiūris:  „Manoji savastis yrà.”",
   "mn2:8.3": "Arba kaip kažkas tikro ir užtikrinto, kyla požiūris: „Manosios savasties nėra.”",
   "mn2:8.4": "Arba kaip kažkas tikro ir užtikrinto, kyla požiūris: „Suvokiu save savastimi.”",
   "mn2:8.5": "Arba kaip kažkas tikro ir užtikrinto, kyla požiūris: „Suvokiu savęs nebūvimą savastimi.”",
