--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.131:0.3": "131. Als Gespenster sterben und als Gespenster wiedergeboren werden ",
   "sn56.131:1.1": "„… ebenso werden wenige Lebewesen, die als Gespenster sterben, als Götter wiedergeboren; viele hingegen, die als Gespenster sterben, werden im Gespensterreich wiedergeboren. ",
   "sn56.131:1.2": "Und warum? ",
-  "sn56.131:1.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. "
+  "sn56.131:1.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. ",
+  "sn56.131:1.4": "Welche vier? "
 }
