--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn56.131:1.1": "„… ebenso werden wenige Lebewesen, die als Gespenster sterben, als Götter wiedergeboren; viele hingegen, die als Gespenster sterben, werden im Gespensterreich wiedergeboren. ",
   "sn56.131:1.2": "Und warum? ",
   "sn56.131:1.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. ",
-  "sn56.131:1.4": "Welche vier? "
+  "sn56.131:1.4": "Welche vier? ",
+  "sn56.131:1.5": "Die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt. "
 }
