--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn56.131:1.3": "Weil sie die vier edlen Wahrheiten nicht gesehen haben. ",
   "sn56.131:1.4": "Welche vier? ",
   "sn56.131:1.5": "Die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt. ",
-  "sn56.131:2.1": "Aus diesem Grund solltet ihr Meditation üben – um zu verstehen: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘“ "
+  "sn56.131:2.1": "Aus diesem Grund solltet ihr Meditation üben – um zu verstehen: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘“ ",
+  "sn56.131:3.1": "Das sagte der Buddha. "
 }
