--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn56.131:2.1": "Aus diesem Grund solltet ihr Meditation üben – um zu verstehen: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘“ ",
   "sn56.131:3.1": "Das sagte der Buddha. ",
   "sn56.131:3.2": "Zufrieden freuten sich die Mönche und Nonnen über die Worte des Buddha. ",
-  "sn56.131:4.5": "Die Verbundenen Lehrreden über die Wahrheiten, der zwölfte Abschnitt. "
+  "sn56.131:4.5": "Die Verbundenen Lehrreden über die Wahrheiten, der zwölfte Abschnitt. ",
+  "sn56.131:5.7": "Das Große Buch ist zu Ende. "
 }
