Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.131_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn56.131:3.1": "Das sagte der Buddha. ",
   "sn56.131:3.2": "Zufrieden freuten sich die Mönche und Nonnen über die Worte des Buddha. ",
   "sn56.131:4.5": "Die Verbundenen Lehrreden über die Wahrheiten, der zwölfte Abschnitt. ",
-  "sn56.131:5.7": "Das Große Buch ist zu Ende. "
+  "sn56.131:5.7": "Das Große Buch ist zu Ende. ",
+  "sn56.131:5.8": "Die Verbundenen Lehrreden sind abgeschlossen. "
 }
