--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -50,7 +50,7 @@
   "mn2:8.10": "Surištas pažiūrų pančiais, vienuoliai, neapmokytas, eilinis žmogus, neišsivaduoja nuo gimimo, senėjimo, mirties, liūdesio, raudojimo, skausmo, nepasitenkinimo ir nevilties.",
   "mn2:8.11": "Neišsivaduoja iš kančios, aš sakau.",
   "mn2:9.1": "Apmokytas gi, vienuoliai, tauriųjų mokinys,",
-  "mn2:9.2": "kuris yra matęs tauriuosius, nusimano apie tauriųjų mokymą ir buvo jo mokytas, kuris yra matęs padorių žmonių, nusimano apie padorių žmonių mokymą ir buvo jo mokytas,",
+  "mn2:9.2": "kuris yra matęs tauriuosius, nusimano apie tauriųjų mokymą ir buvo to mokytas, kuris yra matęs padorių žmonių, nusimano apie padorių žmonių mokymą ir buvo to mokytas,",
   "mn2:9.3": "žino į kokius dalykus dėmesys kreiptinas, o į kokius nekreiptinas.",
   "mn2:9.4": "Žinodamas į kokius dalykus dėmesys kreiptinas, o į kokius nekreiptinas, jis nekreipia dėmesio ten, kur dėmesys yra nekreiptinas ir kreipia dėmesį ten, kur dėmesys yra kreiptinas.",
   "mn2:10.1": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis nekreipia dėmesio, kur dėmesys yra nekreiptinas?",
