Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -23,7 +23,7 @@
   "mn2:5.3": "nežino į kokius dalykus dėmesys kreiptinas, o į kokius nekreiptinas.",
   "mn2:5.4": "Nežinodamas į kokius dalykus dėmesys kreiptinas, o į kokius nekreiptinas, jis kreipia dėmesį ten, kur dėmesys yra nekreiptinas ir nekreipia dėmesio ten, kur dėmesys yra kreiptinas.",
   "mn2:6.1": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis kreipia dėmesį, nors dėmesys ten yra nekreiptinas?",
-  "mn2:6.2": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui kyla dar nekilusi geismo yda, o iškilusi geismo yda auga;",
+  "mn2:6.2": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui kyla dar nekilusi geismo yda, o kilusi geismo yda auga;",
   "mn2:6.3": "kyla dar nekilusi būties troškimo yda, o iškilusi būties troškimo yda auga;",
   "mn2:6.4": "kyla dar nekilusi nežinojimo yda, o iškilusi nežinojimo yda auga –",
   "mn2:6.5": "šie yra dalykai, į kuriuos jis kreipia dėmesį, nors dėmesys ten yra nekreiptinas.",
