Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -25,7 +25,7 @@
   "mn2:6.1": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis kreipia dėmesį, nors dėmesys ten yra nekreiptinas?",
   "mn2:6.2": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui kyla dar nekilusi geismo yda, o kilusi geismo yda auga;",
   "mn2:6.3": "kyla dar nekilusi būties troškimo yda, o kilusi būties troškimo yda auga;",
-  "mn2:6.4": "kyla dar nekilusi nežinojimo yda, o iškilusi nežinojimo yda auga –",
+  "mn2:6.4": "kyla dar nekilusi nežinojimo yda, o kilusi nežinojimo yda auga –",
   "mn2:6.5": "šie yra dalykai, į kuriuos jis kreipia dėmesį, nors dėmesys ten yra nekreiptinas.",
   "mn2:6.6": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis nekreipia dėmesio, nors dėmesys ten yra kreiptinas?",
   "mn2:6.7": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui nekyla dar nekilusi geismo yda, o iškilusios geismo ydos atsikratoma;",
