Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -56,7 +56,7 @@
   "mn2:10.1": "Ir kurie gi, vienuoliai, yra dalykai, į kuriuos jis nekreipia dėmesio, kur dėmesys yra nekreiptinas?",
   "mn2:10.2": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui kyla dar nekilusi geismo yda, o kilusi geismo yda auga;",
   "mn2:10.3": "kyla dar nekilusi būties troškimo yda, o kilusi būties troškimo yda auga;",
-  "mn2:10.4": "kyla dar nekilusi nežinojimo yda, o iškilusi nežinojimo yda auga;",
+  "mn2:10.4": "kyla dar nekilusi nežinojimo yda, o kilusi nežinojimo yda auga;",
   "mn2:10.5": "Šie yra dalykai, į kuriuos jis nekreipia dėmesio, kur dėmesys yra nekreiptinas.",
   "mn2:10.6": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas?",
   "mn2:10.7": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui nekyla dar nekilusi geismo yda, o iškilusios geismo ydos atsikratoma;",
