Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -61,7 +61,7 @@
   "mn2:10.6": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas?",
   "mn2:10.7": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui nekyla dar nekilusi geismo yda, o kilusios geismo ydos atsikratoma;",
   "mn2:10.8": "nekyla dar nekilusi būties troškimo yda, o kilusios būties troškimo ydos atsikratoma;",
-  "mn2:10.9": "nekyla dar nekilusi nežinojimo yda, o iškilusios nežinojimo ydos atsikratoma;",
+  "mn2:10.9": "nekyla dar nekilusi nežinojimo yda, o kilusios nežinojimo ydos atsikratoma;",
   "mn2:10.10": "Šie yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas.",
   "mn2:10.11": "Dėl to, kad jis nekreipia dėmesio ten, kur dėmesys nekreiptinas ir kreipia dėmesį ten, kur dėmesys kreiptinas, jam nekyla dar nekilusios ydos, o kilusių ydų atsikratoma.",
   "mn2:11.1": "Jis nuodugniai įsidėmi: „Tai yra kančia”,  nuodugniai įsidėmi: „Tai yra kančios šaltinis”, nuodugniai įsidėmi: „Tai yra kančios pabaiga”, nuodugniai įsidėmi: „Tai yra kelias į kančios pabaigą”.",
