--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -2,5 +2,5 @@
   "mn1:0.1": "मज्झिम निकाय",
   "mn1:0.2": "मूलपरियायसूत्र",
   "mn1:1.1": "ऐसा मैने सुना—",
-  "mn1:1.2": "एक समय "
+  "mn1:1.2": "एक समय भगवंत उक्कठके पास, सुभग वनमे सालराजके जड पर विहार कर रहे थे।"
 }
