Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -2,5 +2,6 @@
   "mn1:0.1": "मज्झिम निकाय",
   "mn1:0.2": "मूलपरियायसूत्र",
   "mn1:1.1": "ऐसा मैने सुना—",
-  "mn1:1.2": "एक समय भगवंत उक्कठके पास, सुभग वनमे सालराजके जड़ पर विहार कर रहे थे।"
+  "mn1:1.2": "एक समय भगवंत उक्कठके पास, सुभग वनमे सालराजके जड़ पर विहार कर रहे थे।",
+  "mn1:1.3": "वहां भगवंतने भिक्षुओसे कहा:"
 }
