--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -5,5 +5,6 @@
   "mn1:1.2": "एक समय भगवंत उक्कठके पास, सुभग वनमे सालराजके जड़ पर विहार कर रहे थे।",
   "mn1:1.3": "वहां भगवंतने भिक्षुओसे कहा:",
   "mn1:1.4": "“भिक्षुओ!\".",
-  "mn1:1.5": "“भदंत”, भिक्षुओने जवाब दिया।"
+  "mn1:1.5": "“भदंत”, भिक्षुओने जवाब दिया।",
+  "mn1:1.6": "भगवंतने एैसा कहा:"
 }
