--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -6,5 +6,6 @@
   "mn1:1.3": "वहां भगवंतने भिक्षुओसे कहा:",
   "mn1:1.4": "“भिक्षुओ!\".",
   "mn1:1.5": "“भदंत”, भिक्षुओने जवाब दिया।",
-  "mn1:1.6": "भगवंतने एैसा कहा:"
+  "mn1:1.6": "भगवंतने एैसा कहा:",
+  "mn1:2.1": " भिक्षुओ, मैं सभी र्धर्मोके मूलका उपदेश सिखाता हुं,"
 }
