Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -1,4 +1,5 @@
 {
   "mn21:0.1": "Discorsi Medi 21",
-  "mn21:0.2": "La Similitudine della Sega"
+  "mn21:0.2": "La Similitudine della Sega",
+  "mn21:1.1": "Così ho sentito."
 }
