--- a/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
@@ -94,7 +94,7 @@
   "mn5:25.3": "Ma è possibile che qualche altro mendicante riceva le tuniche migliori, il cibo elemosinato migliore, gli alloggi migliori, e le medicine e provvigioni per malati migliori ...",
   "mn5:26-27.6": "Pensando, ‘Qualche altro mendicante ha ricevuto le tuniche migliori, il cibo elemosinato migliore, gli alloggi migliori, e le medicine e provvigioni per malati migliori,’",
   "mn5:26-27.7": "si arrabbia e si inacidisce.",
-  "mn5:26-27.8": "E quella rabbia e quell'acidità",
+  "mn5:26-27.8": "E quella rabbia e quell’acidità",
   "mn5:26-27.9": "sono entrambi difetti.",
   "mn5:28.1": "‘Difetto’ è un termine che sta per le sfere di desideri cattivi e malsani.",
   "mn5:29.1": "Immagina che si veda e senta che queste sfere di desideri cattivi e malsani non sono state abbandonate da un mendicante. Anche se dimora nella natura selvaggia, in alloggi remoti, mangia solo cibo elemosinato, vaga indiscriminatamente mentre elemosina cibo, indossa tuniche di pezza, e indossa tuniche trasandate, i propri compagni spirituali non lo onorano, rispettano, riveriscono, e venerano.",
