Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn5_translation-it-giovannizappa.json
@@ -63,7 +63,7 @@
   "mn5:10.4": "ha commesso un offesa.",
   "mn5:10.5": "Pensando, ‘I mendicanti hanno scoperto della mia offesa,’",
   "mn5:10.6": "si arrabbia e si inacidisce.",
-  "mn5:10.7": "E quella rabbia e quell'acidità",
+  "mn5:10.7": "E quella rabbia e quell’acidità",
   "mn5:10.8": "sono entrambi difetti.",
   "mn5:11.1": "È possibile che un mendicante desideri:",
   "mn5:11.2": "‘Se commetto un offesa, spero che i mendicanti mi accusino in privato, non nel mezzo della comunità.’",
