Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
@@ -161,9 +161,9 @@
   "mn75:19.11": "“La salute è la benedizione suprema; l'estinzione, la gioia suprema.",
   "mn75:19.12": "E combacia, Maestro Gotama.”",
   "mn75:19.13": "“Ma Māgaṇḍiya, quando hai sentito che i pellegrini del passato dicevano ciò,",
-  "mn75:19.14": "cos'è quella salute? E cos'è quell'estinzione?”",
+  "mn75:19.14": "cos'è quella salute? E cos'è quell’estinzione?”",
   "mn75:19.15": "Detto ciò, Māgaṇḍiya si accarezzò gli arti con le mani, dicendo:",
-  "mn75:19.16": "“Questa è quella salute, Maestro Gotama, questa è quell'estinzione!",
+  "mn75:19.16": "“Questa è quella salute, Maestro Gotama, questa è quell’estinzione!",
   "mn75:19.17": "Poiché ora sono sano e felice, e non ho afflizioni.”",
   "mn75:20.1": "“Māgaṇḍiya, supponi che una persona sia nata cieca.",
   "mn75:20.2": "Non vede viste scure o chiare, o blu, gialle, rosse, o magenta. Non vede terreno regolare e irregolare, o le stelle, o la lune e il sole.",
