Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
@@ -188,7 +188,7 @@
   "mn75:21.7": "è sicuro, e porta alla libertà dalla morte.”",
   "mn75:21.8": "Di questi tempi è diventato gradualmente un verso usato dalla gente comune.",
   "mn75:21.9": "Ma Māgaṇḍiya, questo corpo è una malattia, un ascesso, un dardo, una miseria, un'afflizione. Eppure tu dici di questo corpo:",
-  "mn75:21.10": "“Questa è quella salute, Maestro Gotama, questa è quell'estinzione!’",
+  "mn75:21.10": "“Questa è quella salute, Maestro Gotama, questa è quell’estinzione!’",
   "mn75:21.11": "Māgaṇḍiya, tu non possiedi la visione nobile attraverso la quale potresti conoscere la salute e vedere l'estinzione.”",
   "mn75:22.1": "“Sono fiducioso che il Maestro Gotama",
   "mn75:22.2": "sia in grado di insegnarmi affinché io possa conoscere la salute e vedere l'estinzione.”",
@@ -201,7 +201,7 @@
   "mn75:22.9": "Quel dottore non diverrebbe stanco e frustrato?”",
   "mn75:22.10": "“Si, Maestro Gotama.”",
   "mn75:22.11": "“Allo stesso modo, supponi che io ti spieghi l'insegnamento, dicendo:",
-  "mn75:22.12": "‘Questa è quella salute, questa è quell'estinzione’. Ma tu potresti non conoscere la salute e non vedere l'estinzione,",
+  "mn75:22.12": "‘Questa è quella salute, questa è quell’estinzione’. Ma tu potresti non conoscere la salute e non vedere l'estinzione,",
   "mn75:22.13": "il che per me sarebbe frustrante e fastidioso.”",
   "mn75:23.1": "“Sono fiducioso che il Maestro Gotama",
   "mn75:23.2": "sia in grado di insegnarmi affinché io possa conoscere la salute e vedere l'estinzione.”",
