Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn75_translation-it-giovannizappa.json
@@ -222,7 +222,7 @@
   "mn75:23.17": "‘Così a lungo sono stato truffato, ingannato, ed imbrogliato da quella persona con questo vestito sporco e macchiato quando mi disse,",
   "mn75:23.18": "“Signore, ecco qui della stoffa bianca per lei, è attraente, immacolata, e pulita.”’",
   "mn75:24.1": "“Allo stesso modo, supponi che io ti spieghi l'insegnamento, dicendo:",
-  "mn75:24.2": "‘Questa è quella salute, questa è quell'estinzione’.",
+  "mn75:24.2": "‘Questa è quella salute, questa è quell’estinzione’.",
   "mn75:24.3": "Tu potresti conoscere la salute e vedere quell'estinzione.",
   "mn75:24.4": "E appena la tua visione sorge potresti abbandonare il desiderio per i cinque aggregati di attaccamento.",
   "mn75:24.5": "E potresti persino pensare:",
