Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn68_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn68_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn68_translation-it-giovannizappa.json
@@ -3,7 +3,7 @@
   "mn68:0.2": "A Naḷakapāna",
   "mn68:1.1": "Così ho sentito.",
   "mn68:1.2": "Una volta il Buddha si trovava nella terra dei Kosala vicino a Naḷakapāna nel bosco dell'Albero del Pappagallo.",
-  "mn68:2.1": "In quell'occasione vari ragazzi ben noti avevano lasciato la vita laica per quella ascetica per fede nel Buddha—",
+  "mn68:2.1": "In quell’occasione vari ragazzi ben noti avevano lasciato la vita laica per quella ascetica per fede nel Buddha—",
   "mn68:2.2": "i venerabili Anuruddha, Bhaddiya, Kimbila, Bhagu, Koṇḍañña, Revata, Ānanda, ed altri ragazzi ben noti.",
   "mn68:3.1": "In quell'occasione il Buddha era seduto all'aperto, circondato dalla comunità dei mendicanti.",
   "mn68:3.2": "Lì il Buddha parlò ai mendicanti di quei ragazzi:",
