--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -10,5 +10,6 @@
   "mn1:2.1": " भिक्षुओ, मैं सभी र्धर्मोके मूलका उपदेश सिखाता हुं,",
   "mn1:2.2": "उसे सुनो, अैार अच्छी तरेहसे मनमे धारण करो, केहता हुं। ",
   "mn1:2.3": "“हां भन्ते”, भिक्षुओने जवाब दिया।",
-  "mn1:2.4": "भगवंतने एैसा कहा:"
+  "mn1:2.4": "भगवंतने एैसा कहा:",
+  "mn1:3.1": "अभि, भिक्षुओ, अेक अज्ञानी सामान्य मनुष्य जो आर्योके दर्शनसे वंचित है, जिसने आर्योके धर्मको सुना नहि, जो आर्यधर्मसे अंजान है, जोे सत्पुरुषोके दर्शनसे  वंचित है, जिसने सत्पुरुषोके धर्मको सुना नहि, जो सत्पुरुषोके धर्मसे अंजान है—"
 }
