--- a/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn18_translation-it-giovannizappa.json
@@ -52,7 +52,7 @@
   "mn18:15.2": "“Una persona viene assalita da concetti d’identità che emergono dalla proliferazione delle percezioni.",
   "mn18:15.3": "Se non trova niente che valga la pena approvare, accogliere, o a cui attaccarsi nella fonte da cui queste sorgono …",
   "mn18:15.4": "Qui è dove queste qualità cattive e malsane cessano senza che ne rimanga nulla.’ Questo è come capisco in dettaglio il significato di questo passaggio da recitare.",
-  "mn18:16.1": "La coscienza dell’occhio sorge in dipendenza dell'occhio e delle viste. L’incontro dei tre è il contatto. Il contatto è condizione per la sensazione. Ciò che provi, percepisci. Riguardo ciò che percepisci, ci pensi, proliferi. Ciò che proliferi è la fonte da cui una persona è assalita da concetti d’identità che emergono dalla proliferazione delle percezioni. Questo accade per le viste percepite dall'occhio in passato, nel futuro, e nel presente.",
+  "mn18:16.1": "La coscienza dell’occhio sorge in dipendenza dell’occhio e delle viste. L’incontro dei tre è il contatto. Il contatto è condizione per la sensazione. Ciò che provi, percepisci. Riguardo ciò che percepisci, ci pensi, proliferi. Ciò che proliferi è la fonte da cui una persona è assalita da concetti d’identità che emergono dalla proliferazione delle percezioni. Questo accade per le viste percepite dall'occhio in passato, nel futuro, e nel presente.",
   "mn18:16.2": "La coscienza dell’orecchio sorge in dipendenza dell'orecchio e dei suoni. …",
   "mn18:16.3": "La coscienza del naso sorge in dipendenza del naso e degli odori. …",
   "mn18:16.4": "La coscienza della lingua sorge in dipendenza della lingua e dei sapori. …",
