Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
@@ -231,7 +231,7 @@
   "mn1:123.1": "Un mendicante perfetto—con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione—conosce direttamente la terra come terra.",
   "mn1:123.2": "Ma non si identifica con la terra, non si identifica riguardo alla terra, non si identifica come la terra, non si identifica che 'la terra è mia', non trae piacere dalla terra.",
   "mn1:123.3": "Perché questo?",
-  "mn1:123.4": "Perché è libero dall'illusione grazie all'esaurimento dell'illusione.",
+  "mn1:123.4": "Perché è libero dall’illusione grazie all’esaurimento dell’illusione.",
   "mn1:124-146.1": "Conosce direttamente l'acqua …",
   "mn1:124-146.2": "il fuoco …",
   "mn1:124-146.3": "l'aria …",
