--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -1,5 +1,6 @@
 {
   "mn21:0.1": "Discorsi Medi 21",
   "mn21:0.2": "La Similitudine della Sega",
-  "mn21:1.1": "Così ho sentito."
+  "mn21:1.1": "Così ho sentito.",
+  "mn21:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika."
 }
