Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -4,5 +4,6 @@
   "mn21:1.1": "Così ho sentito.",
   "mn21:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn21:2.1": "In quell’occasione il Venerabile Moḷiyaphagguna era troppo affezionato alle monache.",
-  "mn21:2.2": "Così tanto che"
+  "mn21:2.2": "Così tanto che",
+  "mn21:2.3": "se un mendicante criticava quelle monache in sua presenza, Moḷiyaphagguna si arrabbiava e si agitava, e minacciava persino procedimenti disciplinari."
 }
