--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -5,5 +5,6 @@
   "mn21:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn21:2.1": "In quell’occasione il Venerabile Moḷiyaphagguna era in relazione troppo stretta con le monache.",
   "mn21:2.2": "Così tanto che",
-  "mn21:2.3": "se un mendicante criticava quelle monache in sua presenza, Moḷiyaphagguna si arrabbiava e si agitava, e minacciava persino procedimenti disciplinari."
+  "mn21:2.3": "se un mendicante criticava quelle monache in sua presenza, Moḷiyaphagguna si arrabbiava e si agitava, e minacciava persino procedimenti disciplinari.",
+  "mn21:2.4": "E se un mendicante criticava Moḷiyaphagguna in loro presenza, quelle monache si arrabbiavano e si agitavano, e minacciavano persino procedimenti disciplinari."
 }
