--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -7,5 +7,6 @@
   "mn21:2.2": "Così tanto che",
   "mn21:2.3": "se un mendicante criticava quelle monache in sua presenza, Moḷiyaphagguna si arrabbiava e si agitava, e minacciava persino procedimenti disciplinari.",
   "mn21:2.4": "E se un mendicante criticava Moḷiyaphagguna in loro presenza, quelle monache si arrabbiavano e si agitavano, e minacciavano persino procedimenti disciplinari.",
-  "mn21:2.5": "Questo è livello a cui Moḷiyaphagguna era in relazione troppo stretta con le monache."
+  "mn21:2.5": "Questo è livello a cui Moḷiyaphagguna era in relazione troppo stretta con le monache.",
+  "mn21:3.1": "Quindi un mendicante andò dal Buddha, si inchinò, si sedette a lato, e gli raccontò quello che stava succedendo."
 }
