--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -8,5 +8,6 @@
   "mn21:2.3": "se un mendicante criticava quelle monache in sua presenza, Moḷiyaphagguna si arrabbiava e si agitava, e minacciava persino procedimenti disciplinari.",
   "mn21:2.4": "E se un mendicante criticava Moḷiyaphagguna in loro presenza, quelle monache si arrabbiavano e si agitavano, e minacciavano persino procedimenti disciplinari.",
   "mn21:2.5": "Questo è livello a cui Moḷiyaphagguna era in relazione troppo stretta con le monache.",
-  "mn21:3.1": "Quindi un mendicante andò dal Buddha, si inchinò, si sedette a lato, e gli raccontò quello che stava succedendo."
+  "mn21:3.1": "Quindi un mendicante andò dal Buddha, si inchinò, si sedette a lato, e gli raccontò quello che stava succedendo.",
+  "mn21:4.1": "Allora il Buddha si rivolse ad un certo monaco:"
 }
