--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -10,5 +10,6 @@
   "mn21:2.5": "Questo è livello a cui Moḷiyaphagguna era in relazione troppo stretta con le monache.",
   "mn21:3.1": "Quindi un mendicante andò dal Buddha, si inchinò, si sedette a lato, e gli raccontò quello che stava succedendo.",
   "mn21:4.1": "Allora il Buddha si rivolse ad un certo monaco:",
-  "mn21:4.2": "“Per favore, monaco, in mio nome dì al mendicante Moḷiyaphagguna che"
+  "mn21:4.2": "“Per favore, monaco, in mio nome dì al mendicante Moḷiyaphagguna che",
+  "mn21:4.3": "il maestro lo convoca.”"
 }
