Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -12,5 +12,6 @@
   "mn21:4.1": "Allora il Buddha si rivolse ad un certo monaco:",
   "mn21:4.2": "“Per favore, monaco, in mio nome dì al mendicante Moḷiyaphagguna che",
   "mn21:4.3": "il maestro lo convoca.”",
-  "mn21:4.4": "“Sì, Signore,” rispose quel monaco. Andò da Moḷiyaphagguna e gli disse:"
+  "mn21:4.4": "“Sì, Signore,” rispose quel monaco. Andò da Moḷiyaphagguna e gli disse:",
+  "mn21:4.5": "“Fratello Phagguna, il maestro ti convoca.”"
 }
