--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -15,5 +15,6 @@
   "mn21:4.4": "“Sì, Signore,” rispose quel monaco. Andò da Moḷiyaphagguna e gli disse:",
   "mn21:4.5": "“Fratello Phagguna, il maestro ti convoca.”",
   "mn21:4.6": "“Sì, Fratello,” rispose Phagguna. Andò dal Buddha, si inchinò, e si sedette a lato. Il Buddha gli disse:",
-  "mn21:5.1": "“È vero, Phagguna, che sei in relazione troppo stretta con le monache?"
+  "mn21:5.1": "“È vero, Phagguna, che sei in relazione troppo stretta con le monache?",
+  "mn21:5.2": "Così tanto che"
 }
