--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -17,5 +17,6 @@
   "mn21:4.6": "“Sì, Fratello,” rispose Phagguna. Andò dal Buddha, si inchinò, e si sedette a lato. Il Buddha gli disse:",
   "mn21:5.1": "“È vero, Phagguna, che sei in relazione troppo stretta con le monache?",
   "mn21:5.2": "Così tanto che",
-  "mn21:5.3": "se un mendicante critica quelle monache in tua presenza, tu ti arrabbi e ti agiti, e minacci persino procedimenti disciplinari?"
+  "mn21:5.3": "se un mendicante critica quelle monache in tua presenza, tu ti arrabbi e ti agiti, e minacci persino procedimenti disciplinari?",
+  "mn21:5.4": "E se un mendicante ti critica in loro presenza, quelle monache si arrabbiano e si agitano, e minacciano persino procedimenti disciplinari?"
 }
