--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -19,5 +19,6 @@
   "mn21:5.2": "Così tanto che",
   "mn21:5.3": "se un mendicante critica quelle monache in tua presenza, tu ti arrabbi e ti agiti, e minacci persino procedimenti disciplinari?",
   "mn21:5.4": "E se un mendicante ti critica in loro presenza, quelle monache si arrabbiano e si agitano, e minacciano persino procedimenti disciplinari?",
-  "mn21:5.5": "È questo il livello a cui sei in relazione troppo stretta con le monache?”"
+  "mn21:5.5": "È questo il livello a cui sei in relazione troppo stretta con le monache?”",
+  "mn21:5.6": "“Sì, Signore.”"
 }
