--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -21,5 +21,6 @@
   "mn21:5.4": "E se un mendicante ti critica in loro presenza, quelle monache si arrabbiano e si agitano, e minacciano persino procedimenti disciplinari?",
   "mn21:5.5": "È questo il livello a cui sei in relazione troppo stretta con le monache?”",
   "mn21:5.6": "“Sì, Signore.”",
-  "mn21:5.7": "“Phagguna, non sei tu un ragazzo che ha lasciato la vita laica per quella ascetica?”"
+  "mn21:5.7": "“Phagguna, non sei tu un ragazzo che ha lasciato la vita laica per quella ascetica?”",
+  "mn21:5.8": "“Sì, Signore.”"
 }
