--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -22,5 +22,6 @@
   "mn21:5.5": "È questo il livello a cui sei in relazione troppo stretta con le monache?”",
   "mn21:5.6": "“Sì, Signore.”",
   "mn21:5.7": "“Phagguna, non sei tu un ragazzo che ha lasciato la vita laica per quella ascetica?”",
-  "mn21:5.8": "“Sì, Signore.”"
+  "mn21:5.8": "“Sì, Signore.”",
+  "mn21:6.1": "“Allora non è opportuno che tu sia in relazione troppo stretta con le monache."
 }
