--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -25,5 +25,6 @@
   "mn21:5.8": "“Sì, Signore.”",
   "mn21:6.1": "“Allora non è opportuno che tu sia in relazione troppo stretta con le monache.",
   "mn21:6.2": "Quindi se un mendicante critica quelle monache in tua presenza, devi abbandonare qualsiasi desiderio o pensiero per la vita laica.",
-  "mn21:6.3": "Se succede, devi allenarti così:"
+  "mn21:6.3": "Se succede, devi allenarti così:",
+  "mn21:6.4": "‘La mia mente non sarà influenzata. Non userò parole cattive. Rimarrò pieno di compassione, con mente di benevolenza e niente odio segreto.’"
 }
