--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -34,5 +34,6 @@
   "mn21:6.9": "Devi allenarti così.",
   "mn21:6.10": "Quindi se qualcuno ti critica in tua presenza, devi abbandonare qualsiasi desiderio o pensiero per la vita laica.",
   "mn21:6.11": "Se succede, devi allenarti così: ‘La mia mente non sarà influenzata. Non userò parole cattive. Rimarrò pieno di compassione, con mente di benevolenza e niente odio segreto.’",
-  "mn21:6.12": "Devi allenarti così."
+  "mn21:6.12": "Devi allenarti così.",
+  "mn21:6.14": "Se succede, devi allenarti così: ‘La mia mente non sarà influenzata. Non userò parole cattive. Rimarrò pieno di compassione, con mente di benevolenza e niente odio segreto.’"
 }
