--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -39,5 +39,6 @@
   "mn21:6.14": "Se succede, devi allenarti così: ‘La mia mente non sarà influenzata. Non userò parole cattive. Rimarrò pieno di compassione, con mente di benevolenza e niente odio segreto.’",
   "mn21:6.15": "Devi allenarti così.",
   "mn21:7.1": "Poi il Buddha si rivolse ai mendicanti:",
-  "mn21:7.2": "“Mendicanti, prima ero soddisfatto dei mendicanti."
+  "mn21:7.2": "“Mendicanti, prima ero soddisfatto dei mendicanti.",
+  "mn21:7.3": "Una volta mi sono rivolto a loro:"
 }
