Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -40,5 +40,6 @@
   "mn21:6.15": "Devi allenarti così.",
   "mn21:7.1": "Poi il Buddha si rivolse ai mendicanti:",
   "mn21:7.2": "“Mendicanti, prima ero soddisfatto dei mendicanti.",
-  "mn21:7.3": "Una volta mi sono rivolto a loro:"
+  "mn21:7.3": "Una volta mi sono rivolto a loro:",
+  "mn21:7.4": "‘Io mangio il mio cibo in una seduta al giorno."
 }
