--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -41,5 +41,6 @@
   "mn21:7.1": "Poi il Buddha si rivolse ai mendicanti:",
   "mn21:7.2": "“Mendicanti, prima ero soddisfatto dei mendicanti.",
   "mn21:7.3": "Una volta mi sono rivolto a loro:",
-  "mn21:7.4": "‘Io mangio il mio cibo in una seduta al giorno."
+  "mn21:7.4": "‘Io mangio il mio cibo in una seduta al giorno.",
+  "mn21:7.5": "Facendo così, trovo di essere sano e sto bene, sono agile, forte, e comodo."
 }
