Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -55,5 +55,5 @@
   "mn21:7.15": "In questo modo raggiungerete crescita, miglioramento, e maturità in questo insegnamento e addestramento.",
   "mn21:8.1": "Immaginate che non lontano da una cittadina o un villaggio ci sia un grande bosco di alberi di Sal",
   "mn21:8.2": "strozzato da erbacce di ricino.",
-  "mn21:8.3": "Poi arriva una persona che vuole aiutare a proteggere e nutrire quel bosco."
+  "mn21:8.3": "Poi arriva una persona che vuole aiutare a proteggere e a nutrire quel bosco."
 }
