Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -65,5 +65,6 @@
   "mn21:9.2": "Aveva questa buona reputazione:",
   "mn21:9.3": "‘La casalinga Vedehikā è dolce, tranquilla, e calma.’",
   "mn21:9.4": "Ora, Vedehikā aveva una cameriera serva di nome Kāḷī che era abile, infaticabile, e ben organizzata nel lavoro.",
-  "mn21:9.5": "Quindi Kāḷī pensò:"
+  "mn21:9.5": "Quindi Kāḷī pensò:",
+  "mn21:9.6": "‘La mia padrona ha la buona reputazione di essere"
 }
