Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -69,5 +69,6 @@
   "mn21:9.6": "‘La mia padrona ha la buona reputazione di essere",
   "mn21:9.7": "dolce, tranquilla, e calma.",
   "mn21:9.8": "Ma in realtà ha rabbia dentro di sé e non lo mostra? O non ha per niente rabbia?",
-  "mn21:9.9": "O è solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha dentro di sé?"
+  "mn21:9.9": "O è solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha dentro di sé?",
+  "mn21:9.10": "Perché non metto la mia padrona alla prova?’"
 }
