Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -72,5 +72,6 @@
   "mn21:9.9": "O è solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha dentro di sé?",
   "mn21:9.10": "Perché non metto la mia padrona alla prova?’",
   "mn21:9.11": "Allora Kāḷī si alzò durante il giorno.",
-  "mn21:9.12": "Vedehikā le disse:"
+  "mn21:9.12": "Vedehikā le disse:",
+  "mn21:9.13": "‘Che diavolo, Kāḷī!’"
 }
