Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -75,5 +75,6 @@
   "mn21:9.12": "Vedehikā le disse:",
   "mn21:9.13": "‘Che diavolo, Kāḷī!’",
   "mn21:9.14": "‘Che c’è, Signora?’",
-  "mn21:9.15": "‘Ti alzi durante il giorno—cosa ti succede, ragazza?’"
+  "mn21:9.15": "‘Ti alzi durante il giorno—cosa ti succede, ragazza?’",
+  "mn21:9.16": "‘Niente, Signora.’"
 }
