Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -77,5 +77,5 @@
   "mn21:9.14": "‘Che c’è, Signora?’",
   "mn21:9.15": "‘Ti alzi durante il giorno—cosa ti succede, ragazza?’",
   "mn21:9.16": "‘Niente, Signora.’",
-  "mn21:9.17": "‘Non succede niente, cattiva ragazza, ma ti alzi durante il giorno!’ Arrabbiata e agitata si accigliò."
+  "mn21:9.17": "‘Non succede niente, cattiva ragazza, ma ti alzi durante il giorno!’ Arrabbiata e agitata, si accigliò."
 }
