Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -84,5 +84,6 @@
   "mn21:9.21": "Perché non metto la mia padrona alla prova di nuovo?’",
   "mn21:9.22": "Allora Kāḷī si alzò più tardi durante il giorno.",
   "mn21:9.23": "Vedehikā le disse:",
-  "mn21:9.24": "‘Che diavolo, Kāḷī!’"
+  "mn21:9.24": "‘Che diavolo, Kāḷī!’",
+  "mn21:9.25": "‘Che c’è, Signora?’"
 }
