Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -85,5 +85,6 @@
   "mn21:9.22": "Allora Kāḷī si alzò tardi durante il giorno.",
   "mn21:9.23": "Vedehikā le disse:",
   "mn21:9.24": "‘Che diavolo, Kāḷī!’",
-  "mn21:9.25": "‘Che c’è, Signora?’"
+  "mn21:9.25": "‘Che c’è, Signora?’",
+  "mn21:9.26": "‘Ti alzi tardi durante il giorno—cosa ti succede, ragazza?’"
 }
