Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -94,5 +94,6 @@
   "mn21:9.31": "È solo perché il mio lavoro è ben organizzato che non mostra rabbia, anche se ce l'ha ancora dentro di sé.",
   "mn21:9.32": "Perché non metto la mia padrona alla prova di nuovo?’",
   "mn21:9.33": "Allora Kāḷī si alzò ancora più tardi durante il giorno.",
-  "mn21:9.34": "Vedehikā le disse:"
+  "mn21:9.34": "Vedehikā le disse:",
+  "mn21:9.35": "‘Che diavolo, Kāḷī!’"
 }
