Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -97,5 +97,6 @@
   "mn21:9.34": "Vedehikā le disse:",
   "mn21:9.35": "‘Che diavolo, Kāḷī!’",
   "mn21:9.36": "‘Che c’è, Signora?’",
-  "mn21:9.37": "‘Ti alzi ancora più tardi durante il giorno—cosa ti succede, ragazza?’"
+  "mn21:9.37": "‘Ti alzi ancora più tardi durante il giorno—cosa ti succede, ragazza?’",
+  "mn21:9.38": "‘Niente, Signora.’"
 }
