Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -101,5 +101,5 @@
   "mn21:9.38": "‘Niente, Signora.’",
   "mn21:9.39": "‘Non succede niente, cattiva ragazza, ma ti alzi ancora più tardi durante il giorno!’ Arrabbiata e agitata, prese un matterello e colpì Kāḷī sulla testa, crepandola.",
   "mn21:9.40": "Allora Kāḷī, con sangue che le colava dal cranio crepato, denunciò la propria padrona ai vicini:",
-  "mn21:9.41": "‘Vedete, signore, quello che La Dolce ha fatto!"
+  "mn21:9.41": "‘Vedete, signore, quello che la dolce ha fatto!"
 }
