Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -107,5 +107,6 @@
   "mn21:9.44": "Quindi dopo qualche tempo la reputazione della casalinga Vedehikā divenne cattiva:",
   "mn21:9.45": "‘La casalinga Vedehikā è feroce, irascibile, e per niente calma.’",
   "mn21:10.1": "Allo stesso modo, un mendicante potrà essere il più dolce dei dolci, il più tranquillo dei tranquilli, il più calmo dei calmi, finché non incontra delle critiche spiacevoli.",
-  "mn21:10.2": "Ma è quando incontra critiche spiacevoli che saprete se è davvero dolce, tranquillo, e calmo."
+  "mn21:10.2": "Ma è quando incontra critiche spiacevoli che saprete se è davvero dolce, tranquillo, e calmo.",
+  "mn21:10.3": "Non dico che un mendicante sia facile da ammonire se rende sé stesso facile da ammonire solo per amore di tuniche, cibo elemosinato, alloggi, e medicine e provvigioni per malati."
 }
