Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -118,5 +118,6 @@
   "mn21:11.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
   "mn21:11.3": "vero o falso,",
   "mn21:11.4": "gentile o aspro,",
-  "mn21:11.5": "benefico o dannoso,"
+  "mn21:11.5": "benefico o dannoso,",
+  "mn21:11.6": "da una mente di benevolenza o da odio segreto."
 }
