Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -119,5 +119,6 @@
   "mn21:11.3": "vero o falso,",
   "mn21:11.4": "gentile o aspro,",
   "mn21:11.5": "benefico o dannoso,",
-  "mn21:11.6": "da una mente di benevolenza o da odio segreto."
+  "mn21:11.6": "da una mente di benevolenza o da odio segreto.",
+  "mn21:11.7": "Se gli altri vi criticano, lo fanno in uno di questi cinque modi."
 }
