Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -126,5 +126,6 @@
   "mn21:11.14": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente piena di benevolenza a chiunque al mondo—abbondante, espansiva, illimitata, libera da inimicizia e cattiveria.’",
   "mn21:11.15": "Dovete allenarvi così.",
   "mn21:12.1": "Immaginate una persona che arriva portando una vanga e un cesto",
-  "mn21:12.2": "e dice:"
+  "mn21:12.2": "e dice:",
+  "mn21:12.3": "‘Farò sì che questa grande terra sia senza terra!’"
 }
