Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -131,5 +131,6 @@
   "mn21:12.4": "E scava ovunque, sparpaglia ovunque, sputa ovunque, e urina ovunque, dicendo:",
   "mn21:12.5": "‘Sii senza terra! Sii senza terra!’",
   "mn21:12.6": "Cosa ne pensate, mendicanti?",
-  "mn21:12.7": "Quella persona può far sì che questa grande terra sia senza terra?”"
+  "mn21:12.7": "Quella persona può far sì che questa grande terra sia senza terra?”",
+  "mn21:12.8": "“No, Signore."
 }
