Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -146,5 +146,6 @@
   "mn21:13.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi.",
   "mn21:13.12": "Se succede, dovete allenarvi così:",
   "mn21:13.13": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto.",
-  "mn21:13.14": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente come la terra a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’"
+  "mn21:13.14": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente come la terra a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’",
+  "mn21:13.15": "Dovete allenarvi così."
 }
